<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorAccent"
        android:text="@string/rentacar"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/choose_car_make"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textSize="22sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:spinnerMode="dropdown" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/choose_model"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:spinnerMode="dropdown" />

            <ImageView
                android:id="@+id/image1"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/car_image" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorAccent"
                android:text="@string/daily_rate"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtDailyRate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="italic" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:background="@color/colorAccent"
                android:text="@string/current_millage"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtCurrentMillage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="italic" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/choose_renting_days"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textSize="22sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <SeekBar
                    android:id="@+id/seekBarRentDays"
                    android:layout_width="250dp"
                    android:layout_height="match_parent"
                    android:max="15"
                    android:progress="1"/>

                <TextView
                    android:id="@+id/txtRentDays"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:textSize="20sp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/driver_age"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textSize="22sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio21"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/less_than_21" />

                <RadioButton
                    android:id="@+id/radio64"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/_22_64" />

                <RadioButton
                    android:id="@+id/radio65"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/greater_than_or_equal_to_65" />
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/extras"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textSize="22sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkNavigator"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/navigator" />

                <CheckBox
                    android:id="@+id/checkChildSeat"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/child_seat" />

                <CheckBox
                    android:id="@+id/checkBikeRake"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/bike_rake" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/layoutTotalAmount"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:background="@color/colorAccent"
            android:layout_gravity="center"
            android:text="@string/total_amount"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtTotalAmount"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:text="@string/_0"
            android:textColor="@color/colorAccent"
            android:textSize="25sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutTotalAmount">

        <Button
            android:id="@+id/btnGetTotal"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:text="@string/get_amount"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"
            android:background="@color/colorPrimaryDark"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btnRentCar"
            android:layout_marginStart="30dp"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:textSize="22sp"
            android:textStyle="bold"
            android:text="@string/rent_car"
            android:background="@color/colorPrimaryDark"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>